--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,7 @@
             <dependency>
                 <groupId>org.pegdown</groupId>
                 <artifactId>pegdown</artifactId>
-                <version>1.4.2</version>
+                <version>1.1.0</version>
                 <scope>test</scope>
             </dependency>
 
@@ -408,19 +408,19 @@
                 </plugin>
 
                 <!-- disable surefire -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.8.1</version>
-                    <configuration>
-                        <skipTests>false</skipTests>
-                        <includes>
-                            <include>**/*Test*.*</include>
-                            <include>**/*Suite*.*</include>
-                            <include>**/*UnitSpec*.*</include>
-                        </includes>
-                    </configuration>
-                </plugin>
+                <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.8.1</version>-->
+                <!--<configuration>-->
+                <!--<skipTests>false</skipTests>-->
+                <!--<includes>-->
+                <!--<include>**/*Test*.*</include>-->
+                <!--<include>**/*Suite*.*</include>-->
+                <!--<include>**/*UnitSpec*.*</include>-->
+                <!--</includes>-->
+                <!--</configuration>-->
+                <!--</plugin>-->
 
                 <plugin>
                     <groupId>org.scalatest</groupId>
