[UPDATE] 20190402 WallaceHuang:  update SnmpPDUAnalysisUnitSpec

--- a/demo/ScalaDemo/src/main/resources/test.conf
+++ b/demo/ScalaDemo/src/main/resources/test.conf
@@ -1,4 +1,4 @@
-test_1 = 105
+test_1 = [105, 1234]
 
 test_2 = [
   "server= 192.168.1.1",
@@ -39,4 +39,5 @@ test3 {
     "t218=0",
     "t239=0"
   ]
+}
 }
