--- a/demo/SparkDemo/pom.xml
+++ b/demo/SparkDemo/pom.xml
@@ -12,7 +12,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wallace.demo</groupId>
     <artifactId>sparkdemo</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
@@ -251,6 +250,11 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-flume_2.11</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>Azure</groupId>
+            <artifactId>mmlspark</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
