--- a/demo/DataLoader/pom.xml
+++ b/demo/DataLoader/pom.xml
@@ -12,7 +12,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wallace.demo</groupId>
     <artifactId>dataloader</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
@@ -256,6 +255,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
+            <version>0.10.0.1</version>
         </dependency>
 
     </dependencies>
