--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,10 @@
                 <version>0.17</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.mxnet</groupId>
+                <artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
