--- a/demo/SparkDemo/pom.xml
+++ b/demo/SparkDemo/pom.xml
@@ -268,5 +268,10 @@
             <groupId>org.apache.mxnet</groupId>
             <artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.scalanlp</groupId>
+            <artifactId>nak_2.10</artifactId>
+        </dependency>
     </dependencies>
 </project>
