--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.scalanlp</groupId>
+                <artifactId>nak_2.10</artifactId>
+                <version>1.3</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.mxnet</groupId>
                 <artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>
             </dependency>
