--- a/pom.xml
+++ b/pom.xml
@@ -299,10 +299,10 @@
                 <version>1.3</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.apache.mxnet</groupId>
-                <artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.apache.mxnet</groupId>-->
+                <!--<artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
 
