--- a/demo/SparkDemo/pom.xml
+++ b/demo/SparkDemo/pom.xml
@@ -264,10 +264,10 @@
             <version>0.10.0.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.mxnet</groupId>
-            <artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.apache.mxnet</groupId>-->
+        <!--<artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.scalanlp</groupId>
