--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: false
 
-install: travis_wait 60 mvn install -DskipTests -q
+install:
+    - mvn dependency:resolve
+    - travis_wait 60 mvn install -DskipTests -q
 
 cache:
   directories:
