--- a/demo/SparkDemo/pom.xml
+++ b/demo/SparkDemo/pom.xml
@@ -264,6 +264,29 @@
             <version>0.10.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>5.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.24.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.11</artifactId>
+            <version>1.9.1</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.apache.mxnet</groupId>-->
         <!--<artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>-->
