--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,13 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 8.0
       uses: actions/setup-java@v2
       with:
-        java-version: '1.8'
+        java-version: '8.0'
         distribution: 'adopt'
     - name: Run tests
       run: mvn test
       
     - name: Run package
-      run: mvn clean pacakge -DskipTests
+      run: mvn clean pacakge -DskipTests --file pom.xml
