--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -22,4 +22,4 @@ jobs:
       run: mvn clean test
       
     - name: Run package with Maven
-      run: mvn clean pacakge -DskipTests --file pom.xml
+      run: mvn clean package -DskipTests --file pom.xml
